# de-hackbox

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml
faust_scraper/joel/: faust_scraper.py  test.html  tests.py
go_rest/read_data/: read_data.go
go_tutorial/: README.md
go_tutorial/joel/greetings/: greetings.go  greetings_test.go
go_tutorial/joel/hello/: hello.go
sandbox/alex/: app.py  schema.py  utils.py
sandbox/jack/: app.py  helpers.py  test_helpers.py
sandbox/joel/: README.md  app.py  config.yaml  faust_scaper.py  faust_scraper.py  requirements.txt  tests.py  utils.py
