[tool.poetry]
name = "faust-scraper"
version = "0.1.0"
description = ""
authors = ["bishax <alex.bishop@nesta.org.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
faust = {extras = ["rocksdb"], version = "^1.10.4"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^5.4.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"


[tool.poetry.scripts]
send_url = "sandbox.alex.bin.send:send_url"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
