[tool.poetry]
name = "faust-scraper"
version = "0.1.0"
description = ""
authors = ["bishax <alex.bishop@nesta.org.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
faust = {extras = ["rocksdb"], version = "^1.10.4"}
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.2"
toolz = "^0.11.1"
aioboto3 = "^8.2.0"
urllib3 = "<1.26"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^5.4.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
